// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`при выборе элемента из результатов поиска, должен добавить элемент в историю 1`] = `
Array [
  Array [
    Object {
      "category": "CARS",
      "is_plain_text": false,
      "params": Object {
        "cars_params": Object {
          "body_type_group": Array [
            "ANY_BODY",
          ],
          "engine_group": Array [
            "ANY_ENGINE",
          ],
          "seats_group": "ANY_SEATS",
        },
        "catalog_filter": Array [
          Object {
            "mark": "AUDI",
            "model": "A4",
          },
        ],
        "currency": "RUR",
        "customs_state_group": "CLEARED",
        "damage_group": "NOT_BEATEN",
        "exchange_group": "NO_EXCHANGE",
        "has_image": true,
        "in_stock": "ANY_STOCK",
        "owners_count_group": "ANY_COUNT",
        "owning_time_group": "ANY_TIME",
        "seller_group": Array [
          "ANY_SELLER",
        ],
        "state_group": "ALL",
      },
      "query": "",
    },
  ],
]
`;

exports[`при нажатии Enter: если есть результаты поиска, должен добавить первый результат в историю 1`] = `
Array [
  Array [
    Object {
      "category": "CARS",
      "is_plain_text": false,
      "params": Object {
        "cars_params": Object {
          "body_type_group": Array [
            "ANY_BODY",
          ],
          "engine_group": Array [
            "ANY_ENGINE",
          ],
          "seats_group": "ANY_SEATS",
        },
        "catalog_filter": Array [
          Object {
            "mark": "AUDI",
            "model": "A4",
          },
        ],
        "currency": "RUR",
        "customs_state_group": "CLEARED",
        "damage_group": "NOT_BEATEN",
        "exchange_group": "NO_EXCHANGE",
        "has_image": true,
        "in_stock": "ANY_STOCK",
        "owners_count_group": "ANY_COUNT",
        "owning_time_group": "ANY_TIME",
        "seller_group": Array [
          "ANY_SELLER",
        ],
        "state_group": "ALL",
      },
      "query": "A4",
    },
  ],
]
`;
